syntax = "proto3";

package io.harness.gitsync;

option java_multiple_files = true;
import "google/protobuf/wrappers.proto";

message UserPrincipal {
  google.protobuf.StringValue user_id = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue user_name = 3;
}